# pyiwfm

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DOCKER.md  Dockerfile  Dockerfile.full  LICENSE  MANIFEST.in  README.md  Run-WebAPI.ps1  docker-compose.yaml  docker-entrypoint.py  hatch_build.py  pyproject.toml  run_roundtrip.ps1  setup.py  setup_roundtrip.py  test_c2vsimfg_roundtrip.py
.github/workflows/: ci.yml  docs.yml  publish.yml
cmake/: CMakeLists.txt  build.bat  build_hecdss.py
conda-recipe/: meta.yaml
docs/: PEST_INTERFACE_DESIGN.md  PLAN_Complete_IO_Implementation.md  changelog.rst  conf.py  contributing.rst  index.rst  requirements.txt
docs/api/: calibration.rst  comparison.rst  components.rst  core.rst  index.rst  io.rst  mesh_generation.rst  roundtrip.rst  runner.rst  visualization.rst
docs/gallery/: budget_plots.rst  index.rst  mesh_visualization.rst  scalar_fields.rst  stratigraphy.rst  stream_networks.rst  timeseries.rst
docs/scripts/: generate_tutorial_figures.py
docs/tutorials/: building_sample_model.rst  calibration.rst  index.rst  mesh_generation.rst  mixed_mesh.rst  model_comparison.rst  packaging_models.rst  reading_models.rst  visualization.rst
docs/user_guide/: calibration.rst  index.rst  installation.rst  io.rst  mesh.rst  pest.rst  quickstart.rst  stratigraphy.rst  web_viewer.rst
dss-build/: CMakeLists.txt  Dockerfile  build_hecdss.py
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/BudgetDashboard/: BudgetChart.tsx  BudgetControls.tsx  BudgetGlossary.tsx  BudgetLocationMap.tsx  BudgetSettingsModal.tsx  BudgetView.tsx  ComponentRatioChart.tsx  CumulativeDepartureChart.tsx  DiversionBalanceChart.tsx  ExceedanceChart.tsx  MonthlyPatternChart.tsx  budgetLabels.ts  (+5 more)
frontend/src/constants/: colors.ts
frontend/src/stores/: viewerStore.ts
pyiwfm/: __init__.py
pyiwfm/core/: __init__.py  appgrid.py  elements.py  nodes.py  stratigraphy.py
pyiwfm/utilities/: utilities.py
src/pyiwfm/: __init__.py  __main__.py  sample_models.py
src/pyiwfm/calibration/: __init__.py  calctyphyd.py  clustering.py  iwfm2obs.py  model_file_discovery.py  obs_well_spec.py  report.py  residuals.py
src/pyiwfm/cli/: __init__.py  _model_finder.py  _model_loader.py  budget.py  calctyphyd.py  export.py  iwfm2obs.py  package.py  run.py  viewer.py  zbudget.py
src/pyiwfm/comparison/: __init__.py  differ.py  metrics.py  report.py  results_differ.py
src/pyiwfm/components/: __init__.py  connectors.py  groundwater.py  lake.py  rootzone.py  small_watershed.py  stream.py  unsaturated_zone.py
src/pyiwfm/core/: __init__.py  aggregation.py  base_component.py  cross_section.py  exceptions.py  interpolation.py  mesh.py  model.py  model_factory.py  query.py  stratigraphy.py  timeseries.py  zones.py
src/pyiwfm/io/: __init__.py  area_converter.py  area_loader.py  ascii.py  base.py  binary.py  budget.py  budget_control.py  budget_excel.py  budget_pest.py  budget_utils.py  cache_builder.py  cache_loader.py  comment_extractor.py  comment_metadata.py  comment_writer.py  config.py  groundwater.py  gw_boundary.py  gw_boundary_writer.py  gw_main_writer.py  gw_pumping.py  gw_pumping_writer.py  gw_subsidence.py  gw_subsidence_writer.py  gw_tiledrain.py  gw_tiledrain_writer.py  gw_writer.py  hdf5.py  head_all_converter.py  head_loader.py  hydrograph_converter.py  hydrograph_reader.py  iwfm_reader.py  iwfm_writer.py  lake_writer.py  lakes.py  model_loader.py  model_packager.py  model_writer.py  (+39 more)
src/pyiwfm/mesh_generation/: __init__.py  constraints.py  generators.py  gmsh_wrapper.py  triangle_wrapper.py
src/pyiwfm/roundtrip/: __init__.py  config.py  file_differ.py  pipeline.py  script_generator.py
src/pyiwfm/runner/: __init__.py  executables.py  pest.py  pest_ensemble.py  pest_geostat.py  pest_helper.py  pest_instructions.py  pest_manager.py  pest_obs_manager.py  pest_observations.py  pest_params.py  pest_postprocessor.py  pest_templates.py  results.py  runner.py  scenario.py
src/pyiwfm/templates/: __init__.py  engine.py  filters.py
src/pyiwfm/utils/: __init__.py
src/pyiwfm/visualization/: __init__.py  _plot_utils.py  calibration_plots.py  gis_export.py  plot_budget.py  plot_calibration.py  plot_mesh.py  plot_timeseries.py  plotting.py  vtk_export.py
tests/: __init__.py  conftest.py  test_comment_roundtrip.py  test_comment_roundtrip_simple.py  test_sample_model_roundtrip.py
tests/fixtures/: budget_control.in  generate_small_model.py  zbudget_control.in
tests/fixtures/calibration/: README.md  cluster_weights.txt  expected_gw_out.smp  expected_multilayer.ins  expected_multilayer.out  expected_typhyd_cls0.txt  expected_typhyd_cls1.txt  obs_gw.smp  obs_well_spec.txt  sim_gw.smp
tests/integration/: __init__.py  conftest.py  test_calibration_c2vsimfg.py  test_pest_subsidence.py  test_preprocessor_run.py  test_roundtrip.py  test_roundtrip_unified.py  test_simulation_run.py  test_tutorial_vs_sample_model.py
tests/unit/: __init__.py  test_aggregation.py  test_area_converter.py  test_budget_control.py  test_budget_excel.py  test_budget_pest.py  test_budget_reader.py  test_budget_utils.py  test_calctyphyd.py  test_calctyphyd_realistic.py  test_calibration_iwfm2obs_deep.py  test_calibration_pipeline.py  test_calibration_plots.py  test_calibration_plots_deep.py  test_calibration_plots_sweep.py  test_calibration_report.py  test_calibration_residuals.py  test_cli_budget_zbudget.py  test_cli_calibration.py  test_cli_export.py  test_cli_main.py  test_cli_model_finder.py  test_cli_model_loader.py  test_cli_viewer.py  test_clustering.py  test_comment_preservation.py  test_comparison_results_differ.py  test_comparison_results_differ_deep.py  test_component_writers.py  test_components_gw_coverage.py  test_connectors.py  test_constraints_coverage.py  test_core_cross_section_coverage.py  test_core_exceptions.py  test_core_model_coverage.py  test_core_model_extra.py  test_cross_section.py  test_differ.py  test_dss_coverage.py  test_dss_pathname.py  (+208 more)
(+147 files in other folders)
