[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyiwfm"
version = "1.0.1"
description = "Python package for reading, writing, visualizing, and comparing IWFM models"
readme = "README.md"
license = "GPL-2.0-only"
requires-python = ">=3.10"
authors = [
    { name = "hatch-tyler", email = "hatch.tyler@gmail.com" }
]
keywords = ["iwfm", "hydrology", "groundwater", "water-resources", "modeling"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Hydrology",
]
dependencies = [
    "numpy>=1.23",
    "pandas>=2.0",
    "h5py>=3.7",
    "jinja2>=3.0",
    "matplotlib>=3.8",
    "geopandas>=1.0",
    "shapely>=2.0",
    "pyogrio>=0.7",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
mesh = [
    "triangle>=20220202",
    "gmsh>=4.11",
]
viz = [
    "vtk>=9.0",
]
webapi = [
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "pydantic>=2.0",
    "pyvista>=0.43",
    "vtk>=9.0",
    "pyproj>=3.4",
    "python-multipart>=0.0.6",
]
pest = [
    "scipy>=1.7",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "hypothesis>=6.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0",
    "httpx>=0.24",
    "types-python-dateutil>=2.8",
    "types-openpyxl>=3.1",
    "pandas-stubs>=2.0",
]
docs = [
    "sphinx>=7.0",
    "pydata-sphinx-theme>=0.14",
    "sphinx-copybutton>=0.5",
    "sphinx-design>=0.5",
    "myst-parser>=2.0",
    "numpydoc>=1.6",
    "triangle>=20220202",
    "gmsh>=4.11",
]
all = [
    "pyiwfm[mesh,viz,webapi,pest]",
]

[project.scripts]
pyiwfm = "pyiwfm.cli:main"

[project.urls]
Homepage = "https://github.com/hatch-tyler/pyiwfm"
Documentation = "https://hatch-tyler.github.io/pyiwfm/"
Repository = "https://github.com/hatch-tyler/pyiwfm"

[tool.hatch.build.targets.sdist]
include = [
    "src/pyiwfm/**",
    "frontend/src/**",
    "frontend/public/**",
    "frontend/package.json",
    "frontend/package-lock.json",
    "frontend/tsconfig.json",
    "frontend/tsconfig.node.json",
    "frontend/vite.config.ts",
    "frontend/index.html",
    "tests/**",
    "pyproject.toml",
    "hatch_build.py",
    "README.md",
    "LICENSE",
    "CLAUDE.md",
]

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.wheel]
packages = ["src/pyiwfm"]
artifacts = [
    "src/pyiwfm/templates/**/*.j2",
    "src/pyiwfm/io/dss/lib/*",
    "src/pyiwfm/visualization/webapi/static/**",
    "src/pyiwfm/visualization/styles/*.mplstyle",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "property: marks tests as property-based tests",
    "roundtrip: marks tests as roundtrip integration tests",
]

[tool.coverage.run]
source = ["src/pyiwfm"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
show_missing = true
fail_under = 70

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
[[tool.mypy.overrides]]
module = [
    "h5py.*",
    "triangle.*",
    "gmsh.*",
    "vtk.*",
    "pyvista.*",
    "fastapi.*",
    "uvicorn.*",
    "scipy.*",
    "dateutil.*",
    "pydantic.*",
    "pyproj.*",
    "starlette.*",
    "geopandas.*",
    "shapely.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "NPY", # numpy-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["pyiwfm"]

